--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,7 @@
-<<<<<<< HEAD
-Flask==2.3.3
-Flask-CORS==4.0.0
-Pillow==10.0.0
+Flask==2.0.1
+Pillow==9.5.0
 numpy==1.24.3
-Werkzeug==2.3.7 
-=======
-flask==3.0.2
-flask-cors==4.0.0
-pillow==10.2.0
-python-dotenv==1.0.1
-werkzeug==3.0.1 
->>>>>>> 7bdaeb7bf44d50161286970adc9eb17d0529f638
+opencv-python-headless==4.8.0.74
+gunicorn==20.1.0
+python-dotenv==1.0.0
+Werkzeug==2.2.3
