--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-Flask==2.0.1
-Pillow==9.5.0
-numpy==1.24.3
-opencv-python-headless==4.8.0.74
-gunicorn==20.1.0
+Flask==2.3.3
+Werkzeug==2.3.7
+Pillow==10.2.0
+numpy==1.26.3
+opencv-python-headless==4.9.0.80
+gunicorn==21.2.0
 python-dotenv==1.0.0
-Werkzeug==2.2.3
+setuptools==69.0.3
